# gql-sql-connector

./: Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.doxygen.in  config.h.in  configure  configure.ac  getpysqlcatalog.py  gqlcgi.cpp  gqldb.cpp  gqlprinter.cpp  libgqldb.cpp  libgqlparse.cpp  libgqlsql.h  mysqlconnect.cpp  postgresql.pg_type  postgresqlconnect.cpp
libs/uriparser2/: Makefile.am  Makefile.am.bak  Makefile.in  test-uriparser2.c  uriparser2.c  uriparser2.h
libs/uriparser2/uriparser/: UriIp4.c  UriParse.c
test/: Makefile.am  Makefile.in  OnExitTest.cpp  ParserTest.cpp  PrinterTest.cpp  TokenTest.cpp  chart.html  gold.csv  gold.html  gold.json  gold.tsv  goldcgi.1.header  goldcgi.1.json  goldcgi.1.url  goldcgi.10.json  goldcgi.10.url  goldcgi.11.url  goldcgi.2.json  goldcgi.2.url  goldcgi.3.doc  goldcgi.3.header  goldcgi.3.url  goldcgi.4.doc  goldcgi.4.url  goldcgi.5.doc  goldcgi.5.header  goldcgi.5.url  goldcgi.6.header  goldcgi.6.json  goldcgi.6.url  goldcgi.7.json  goldcgi.7.url  goldcgi.8.doc  goldcgi.8.url  goldcgi.9.doc  goldcgi.9.header  goldcgi.9.url  gqlconfig.1  gqlconfig.2  gqlconfig.cgi  (+32 more)
